fix: hide line shape overflow

--- a/app/css/main.css
+++ b/app/css/main.css
@@ -690,6 +690,18 @@ body {
   }
 }
 
+@media screen and (min-width: 1024px) {
+  .how-it-works .wrapper::after {
+    content: '';
+    height: 100%;
+    width: 10rem;
+    background-color: var(--color-white);
+    position: absolute;
+    top: 0;
+    right: 0;
+  }
+}
+
 .how-it-works__list {
   text-align: center;
 }
@@ -741,8 +753,10 @@ body {
   }
 }
 
-.how-it-works__item:last-of-type {
-  background-color: var(--color-white);
+@media screen and (min-width: 1024px) {
+  .how-it-works__item:last-of-type {
+    background-color: var(--color-white);
+  }
 }
 
 .how-it-works__item img {
@@ -804,14 +818,11 @@ body {
 
 .how-it-works .shape {
   position: absolute;
-  background-repeat: no-repeat;
-  background-size: cover;
 }
 
 .how-it-works .shape--line {
   width: .9375rem;
   height: 32.0625rem;
-  background-color: var(--color-lightGray);
   background-image: url(../../assets/patterns/line-gray.svg);
   top: 0;
   left: calc(2.5rem + 6rem);
@@ -821,10 +832,9 @@ body {
 @media screen and (min-width: 1024px) {
   .how-it-works .shape--line {
     height: .9375rem;
-    width: 60.875rem;
     width: calc((21.875rem * 2) + (1.875rem * 2) + 10rem);
-    left: 0;
     top: calc(2.5rem + 10rem);
+    left: 0;
   }
 }
 
